# gpx_routes_backend

./: .gitignore  README.md
backend_dev/: .gitignore  Makefile  README.md
backend_dev/deploy/: docker-compose.base.yml  docker-compose.local.yml
backend_dev/deploy/env_file/: .env_app
backend_dev/gpx_dev/: .env  Dockerfile  db.sqlite3  pyproject.toml
backend_dev/gpx_dev/api/v1/: urls.py
backend_dev/gpx_dev/core/: settings.py  urls.py
deploy/: docker-compose.base.yml  docker-compose.local.yml
gpx_dev/: Dockerfile  manage.py  pyproject.toml  start.sh
gpx_dev/api/v1/: urls.py
gpx_dev/api/v1/serializers/: __init__.py  user_serializers.py
gpx_dev/api/v1/test_api/: test_user_api.py
gpx_dev/api/v1/views/: __init__.py  user_views.py
gpx_dev/gpx_routes_backend/: asgi.py  settings.py  urls.py  wsgi.py
gpx_dev/users/: admin.py  models.py  tests.py
gpx_dev/users/migrations/: 0001_initial.py  0002_follow.py
gpx_routes_backend/: README.md
gpx_routes_backend/deploy/: .env  docker-compose.base.yml
gpx_routes_backend/gpx_dev/: start.sh
gpx_routes_backend/gpx_dev/core/: asgi.py  urls.py
